# learning_to_adapt

./: CMakeLists.txt  Config.cmake.in  README.md
configs/: loco_bio_gs_unified.yaml
data/fig3/fig3a/: pi_bio.csv  pi_noSE.csv  pi_nobeta.csv
data/fig3/fig3c/: pi_bio.csv  pi_noSE.csv  pi_nobeta.csv
data/fig4/: amble_flat.csv  amble_terr.csv  bound_flat.csv  bound_terr.csv  gs_unified_flat.csv  gs_unified_terr.csv  hop_flat.csv  hop_terr.csv  limp_flat.csv  limp_terr.csv  pronk_flat.csv  pronk_terr.csv  trot_flat.csv  trot_terr.csv  trotrun_flat.csv  trotrun_terr.csv
data/fig5/fig5a/: CoT_dog_trot.csv  CoT_dog_walk.csv  CoT_horse2_trot.csv  CoT_horse2_walk.csv  CoT_horse_trot.csv  CoT_horse_walk.csv  musculoskeletal_horse_gallop.csv  musculoskeletal_horse_trot.csv  run.csv  strideCV_dog.csv  strideCV_opossum.csv
data/fig6/: fig6a.csv  fig6b.csv  fig6c.csv  fig6d.csv
data/figA1/: gs_sprint.csv  gs_sprint_grass.csv  run_sprint.csv  run_sprint_grass.csv  trot_sprint.csv  trot_sprint_grass.csv
data/figA2/: figA2.csv
include/learning_to_adapt/: foot_swing_traj.hpp  gait_data.hpp  gait_scheduler.hpp  gait_type.hpp  user_command.hpp
models/a1/urdf/: a1.urdf  a1_blue.urdf  a1_green.urdf  a1_red.urdf  a1_silver.urdf
policies/pi_gs/: mean.csv  var.csv
policies/pi_loco/: mean.csv  var.csv
python/learning_to_adapt/: engine_interface.py  joint_controller_simple_PD.py  obs_manager.py  policy_manager.py  raisim.py  robot.py  yaml_parser.py
scripts/: run_demo.py
src/learning_to_adapt/: gait_data.cpp  gait_scheduler.cpp
srcpy/learning_to_adapt/: gait_data.cpp  gait_scheduler.cpp  gait_type.cpp  module.cpp  user_command.cpp
